# auto_agents

./: .env.example  .gitignore  conf.yaml.example  langgraph.json  pyproject.toml
src/: __init__.py
src/agents/: agent.py
src/config/: __init__.py  agent_config.py  llm_config.py  tool_config.py  tools_config.py  yaml_loader.py
src/graph/: chat_agent.py  complex_graph_demo.py  comprehensive.py  config.py  defer.py  graph.py  human_in_the_loop.py  memory.py  retry.py  state.py  utils.py
src/llms/: __init__.py  llm.py  sora.py
src/mcp/: weather_server.py
src/prompt/: __init__.py  chatbot_prompt.md  template.py
src/tools/: __init__.py  builtin.py  crawl.py  decorator.py  python_repl.py  search.py  sora_tool.py  tts.py  web_crawl.py
src/tools/crawler/: __init__.py  base.py  crawl_errors.py  crawl_result.py  tavily_crawler.py  webbase_crawler.py
